Remove incorrect special casing of root block. Webcore needs this hack because it still uses the old root-is-initial-containing-block model, but we don't, so there is no need to break the spec here.

BUG: 134518


svn path=/branches/KDE/3.5/kdelibs/; revision=587726